// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gameboy-dark 1`] = `
{
  "id": "gameboy",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#0f2410",
    ],
    [
      "--foreground",
      "#b8d143",
    ],
    [
      "--card",
      "#16311a",
    ],
    [
      "--card-foreground",
      "#b8d143",
    ],
    [
      "--popover",
      "#1c3d21",
    ],
    [
      "--popover-foreground",
      "#b8d143",
    ],
    [
      "--primary",
      "#9bbc0f",
    ],
    [
      "--primary-foreground",
      "#0f2410",
    ],
    [
      "--secondary",
      "#16311a",
    ],
    [
      "--secondary-foreground",
      "#b8d143",
    ],
    [
      "--muted",
      "#16311a",
    ],
    [
      "--muted-foreground",
      "#83a049",
    ],
    [
      "--accent",
      "#1c3d21",
    ],
    [
      "--accent-foreground",
      "#b8d143",
    ],
    [
      "--destructive",
      "#c4553d",
    ],
    [
      "--border",
      "#3d6b3d",
    ],
    [
      "--input",
      "#3d6b3d",
    ],
    [
      "--ring",
      "#9bbc0f",
    ],
    [
      "--sidebar",
      "#0a1a0b",
    ],
    [
      "--sidebar-foreground",
      "#b8d143",
    ],
    [
      "--sidebar-primary",
      "#9bbc0f",
    ],
    [
      "--sidebar-primary-foreground",
      "#0f2410",
    ],
    [
      "--sidebar-accent",
      "#1c3d21",
    ],
    [
      "--sidebar-accent-foreground",
      "#b8d143",
    ],
    [
      "--sidebar-border",
      "#3d6b3d",
    ],
    [
      "--sidebar-ring",
      "#9bbc0f",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#3d6b3d",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#050d05",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#0f2410",
    ],
    [
      "--terminal-foreground",
      "#b8d143",
    ],
    [
      "--terminal-cursor",
      "#9bbc0f",
    ],
    [
      "--terminal-cursor-accent",
      "#0f2410",
    ],
    [
      "--terminal-selection",
      "rgba(155,188,15,0.28)",
    ],
    [
      "--terminal-ansi-black",
      "#2a4a2a",
    ],
    [
      "--terminal-ansi-red",
      "#e0705c",
    ],
    [
      "--terminal-ansi-green",
      "#9bbc0f",
    ],
    [
      "--terminal-ansi-yellow",
      "#e0b641",
    ],
    [
      "--terminal-ansi-blue",
      "#6aa8d4",
    ],
    [
      "--terminal-ansi-magenta",
      "#c08ab8",
    ],
    [
      "--terminal-ansi-cyan",
      "#5fc4b8",
    ],
    [
      "--terminal-ansi-white",
      "#b8d143",
    ],
    [
      "--terminal-ansi-bright-black",
      "#5a7a4a",
    ],
    [
      "--terminal-ansi-bright-red",
      "#f08a76",
    ],
    [
      "--terminal-ansi-bright-green",
      "#b8d94a",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#f0cf68",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#8ac4e8",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#d8a8d0",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#84dcd0",
    ],
    [
      "--terminal-ansi-bright-white",
      "#dcecb0",
    ],
    [
      "--syntax-comment",
      "#5a7a4a",
    ],
    [
      "--syntax-keyword",
      "#c08ab8",
    ],
    [
      "--syntax-string",
      "#9bbc0f",
    ],
    [
      "--syntax-number",
      "#e0b641",
    ],
    [
      "--syntax-constant",
      "#d8a8d0",
    ],
    [
      "--syntax-func",
      "#6aa8d4",
    ],
    [
      "--syntax-variable",
      "#b8d143",
    ],
    [
      "--syntax-property",
      "#5fc4b8",
    ],
    [
      "--syntax-gutter-fg",
      "#5a7a4a",
    ],
    [
      "--syntax-type",
      "#84dcd0",
    ],
    [
      "--syntax-operator",
      "#b8d143",
    ],
    [
      "--syntax-tag",
      "#e0705c",
    ],
    [
      "--syntax-tag-bracket",
      "#5a7a4a",
    ],
    [
      "--syntax-attr",
      "#f0cf68",
    ],
    [
      "--syntax-attr-value",
      "#9bbc0f",
    ],
    [
      "--syntax-heading",
      "#6aa8d4",
    ],
    [
      "--syntax-link",
      "#5fc4b8",
    ],
    [
      "--syntax-invalid",
      "#f08a76",
    ],
    [
      "--status-added",
      "#9bbc0f",
    ],
    [
      "--status-modified",
      "#e0b641",
    ],
    [
      "--status-deleted",
      "#e1715c",
    ],
    [
      "--status-renamed",
      "#6aa8d4",
    ],
    [
      "--status-warning",
      "#e0b641",
    ],
    [
      "--status-conflict",
      "#5fc4b8",
    ],
    [
      "--status-ok",
      "#9bbc0f",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gameboy-light 1`] = `
{
  "id": "gameboy",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#c4d17a",
    ],
    [
      "--foreground",
      "#0f380f",
    ],
    [
      "--card",
      "#b5c46a",
    ],
    [
      "--card-foreground",
      "#0f380f",
    ],
    [
      "--popover",
      "#d2dc92",
    ],
    [
      "--popover-foreground",
      "#0f380f",
    ],
    [
      "--primary",
      "#306230",
    ],
    [
      "--primary-foreground",
      "#d2dc92",
    ],
    [
      "--secondary",
      "#b5c46a",
    ],
    [
      "--secondary-foreground",
      "#0f380f",
    ],
    [
      "--muted",
      "#b5c46a",
    ],
    [
      "--muted-foreground",
      "#33541f",
    ],
    [
      "--accent",
      "#9bbc0f",
    ],
    [
      "--accent-foreground",
      "#0f380f",
    ],
    [
      "--destructive",
      "#8b2c2c",
    ],
    [
      "--border",
      "#33541f",
    ],
    [
      "--input",
      "#33541f",
    ],
    [
      "--ring",
      "#306230",
    ],
    [
      "--sidebar",
      "#a8b85e",
    ],
    [
      "--sidebar-foreground",
      "#0f380f",
    ],
    [
      "--sidebar-primary",
      "#306230",
    ],
    [
      "--sidebar-primary-foreground",
      "#d2dc92",
    ],
    [
      "--sidebar-accent",
      "#9bbc0f",
    ],
    [
      "--sidebar-accent-foreground",
      "#0f380f",
    ],
    [
      "--sidebar-border",
      "#33541f",
    ],
    [
      "--sidebar-ring",
      "#306230",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#d2dc92",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#33541f",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#c4d17a",
    ],
    [
      "--terminal-foreground",
      "#0f380f",
    ],
    [
      "--terminal-cursor",
      "#306230",
    ],
    [
      "--terminal-cursor-accent",
      "#c4d17a",
    ],
    [
      "--terminal-selection",
      "rgba(48,98,48,0.30)",
    ],
    [
      "--terminal-ansi-black",
      "#0f380f",
    ],
    [
      "--terminal-ansi-red",
      "#7a2020",
    ],
    [
      "--terminal-ansi-green",
      "#2f5d18",
    ],
    [
      "--terminal-ansi-yellow",
      "#6b4a05",
    ],
    [
      "--terminal-ansi-blue",
      "#1e4a6b",
    ],
    [
      "--terminal-ansi-magenta",
      "#5f2d55",
    ],
    [
      "--terminal-ansi-cyan",
      "#145450",
    ],
    [
      "--terminal-ansi-white",
      "#40561f",
    ],
    [
      "--terminal-ansi-bright-black",
      "#33541f",
    ],
    [
      "--terminal-ansi-bright-red",
      "#5e1717",
    ],
    [
      "--terminal-ansi-bright-green",
      "#244a12",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#523904",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#173a52",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#4a2342",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#0f423f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#0a2b0a",
    ],
    [
      "--syntax-comment",
      "#33541f",
    ],
    [
      "--syntax-keyword",
      "#5f2d55",
    ],
    [
      "--syntax-string",
      "#2f5d18",
    ],
    [
      "--syntax-number",
      "#6b4a05",
    ],
    [
      "--syntax-constant",
      "#4a2342",
    ],
    [
      "--syntax-func",
      "#1e4a6b",
    ],
    [
      "--syntax-variable",
      "#0f380f",
    ],
    [
      "--syntax-property",
      "#145450",
    ],
    [
      "--syntax-gutter-fg",
      "#33541f",
    ],
    [
      "--syntax-type",
      "#0f423f",
    ],
    [
      "--syntax-operator",
      "#0f380f",
    ],
    [
      "--syntax-tag",
      "#7a2020",
    ],
    [
      "--syntax-tag-bracket",
      "#33541f",
    ],
    [
      "--syntax-attr",
      "#523904",
    ],
    [
      "--syntax-attr-value",
      "#2f5d18",
    ],
    [
      "--syntax-heading",
      "#1e4a6b",
    ],
    [
      "--syntax-link",
      "#145450",
    ],
    [
      "--syntax-invalid",
      "#5e1717",
    ],
    [
      "--status-added",
      "#295610",
    ],
    [
      "--status-modified",
      "#674600",
    ],
    [
      "--status-deleted",
      "#7a2020",
    ],
    [
      "--status-renamed",
      "#1e4a6b",
    ],
    [
      "--status-warning",
      "#674600",
    ],
    [
      "--status-conflict",
      "#145450",
    ],
    [
      "--status-ok",
      "#295610",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gruvbox-dark 1`] = `
{
  "id": "gruvbox",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#282828",
    ],
    [
      "--foreground",
      "#ebdbb2",
    ],
    [
      "--card",
      "#32302f",
    ],
    [
      "--card-foreground",
      "#ebdbb2",
    ],
    [
      "--popover",
      "#32302f",
    ],
    [
      "--popover-foreground",
      "#ebdbb2",
    ],
    [
      "--primary",
      "#fabd2f",
    ],
    [
      "--primary-foreground",
      "#282828",
    ],
    [
      "--secondary",
      "#3c3836",
    ],
    [
      "--secondary-foreground",
      "#ebdbb2",
    ],
    [
      "--muted",
      "#3c3836",
    ],
    [
      "--muted-foreground",
      "#a89984",
    ],
    [
      "--accent",
      "#3c3836",
    ],
    [
      "--accent-foreground",
      "#ebdbb2",
    ],
    [
      "--destructive",
      "#fb4934",
    ],
    [
      "--border",
      "#504945",
    ],
    [
      "--input",
      "#665c54",
    ],
    [
      "--ring",
      "#fabd2f",
    ],
    [
      "--sidebar",
      "#1d2021",
    ],
    [
      "--sidebar-foreground",
      "#ebdbb2",
    ],
    [
      "--sidebar-primary",
      "#fabd2f",
    ],
    [
      "--sidebar-primary-foreground",
      "#282828",
    ],
    [
      "--sidebar-accent",
      "#3c3836",
    ],
    [
      "--sidebar-accent-foreground",
      "#ebdbb2",
    ],
    [
      "--sidebar-border",
      "#504945",
    ],
    [
      "--sidebar-ring",
      "#fabd2f",
    ],
    [
      "--radius",
      "0.25rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "2px",
    ],
    [
      "--frame-radius",
      "8px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#3c3836",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#1d2021",
    ],
    [
      "--terminal-foreground",
      "#ebdbb2",
    ],
    [
      "--terminal-cursor",
      "#ebdbb2",
    ],
    [
      "--terminal-cursor-accent",
      "#1d2021",
    ],
    [
      "--terminal-selection",
      "rgba(250,189,47,0.25)",
    ],
    [
      "--terminal-ansi-black",
      "#282828",
    ],
    [
      "--terminal-ansi-red",
      "#fb4934",
    ],
    [
      "--terminal-ansi-green",
      "#98971a",
    ],
    [
      "--terminal-ansi-yellow",
      "#d79921",
    ],
    [
      "--terminal-ansi-blue",
      "#529294",
    ],
    [
      "--terminal-ansi-magenta",
      "#bf6f93",
    ],
    [
      "--terminal-ansi-cyan",
      "#689d6a",
    ],
    [
      "--terminal-ansi-white",
      "#a89984",
    ],
    [
      "--terminal-ansi-bright-black",
      "#928374",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ff5f48",
    ],
    [
      "--terminal-ansi-bright-green",
      "#b8bb26",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#fabd2f",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#83a598",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#d3869b",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#8ec07c",
    ],
    [
      "--terminal-ansi-bright-white",
      "#ebdbb2",
    ],
    [
      "--syntax-comment",
      "#928374",
    ],
    [
      "--syntax-keyword",
      "#c6759a",
    ],
    [
      "--syntax-string",
      "#98971a",
    ],
    [
      "--syntax-number",
      "#d79921",
    ],
    [
      "--syntax-constant",
      "#d3869b",
    ],
    [
      "--syntax-func",
      "#58999a",
    ],
    [
      "--syntax-variable",
      "#ebdbb2",
    ],
    [
      "--syntax-property",
      "#689d6a",
    ],
    [
      "--syntax-gutter-fg",
      "#928374",
    ],
    [
      "--syntax-type",
      "#8ec07c",
    ],
    [
      "--syntax-operator",
      "#ebdbb2",
    ],
    [
      "--syntax-tag",
      "#ff4f39",
    ],
    [
      "--syntax-tag-bracket",
      "#928374",
    ],
    [
      "--syntax-attr",
      "#fabd2f",
    ],
    [
      "--syntax-attr-value",
      "#98971a",
    ],
    [
      "--syntax-heading",
      "#58999a",
    ],
    [
      "--syntax-link",
      "#689d6a",
    ],
    [
      "--syntax-invalid",
      "#ff5f48",
    ],
    [
      "--status-added",
      "#9d9c22",
    ],
    [
      "--status-modified",
      "#d79921",
    ],
    [
      "--status-deleted",
      "#ff654d",
    ],
    [
      "--status-renamed",
      "#61a2a3",
    ],
    [
      "--status-warning",
      "#d79921",
    ],
    [
      "--status-conflict",
      "#6ea470",
    ],
    [
      "--status-ok",
      "#9d9c22",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "50%",
    ],
    [
      "--emph-medium",
      "62%",
    ],
    [
      "--emph-strong",
      "75%",
    ],
    [
      "--emph-bold",
      "95%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > gruvbox-light 1`] = `
{
  "id": "gruvbox",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#fbf1c7",
    ],
    [
      "--foreground",
      "#3c3836",
    ],
    [
      "--card",
      "#f9f5d7",
    ],
    [
      "--card-foreground",
      "#3c3836",
    ],
    [
      "--popover",
      "#f9f5d7",
    ],
    [
      "--popover-foreground",
      "#3c3836",
    ],
    [
      "--primary",
      "#b57614",
    ],
    [
      "--primary-foreground",
      "#fbf1c7",
    ],
    [
      "--secondary",
      "#ebdbb2",
    ],
    [
      "--secondary-foreground",
      "#3c3836",
    ],
    [
      "--muted",
      "#ebdbb2",
    ],
    [
      "--muted-foreground",
      "#776a60",
    ],
    [
      "--accent",
      "#ebdbb2",
    ],
    [
      "--accent-foreground",
      "#3c3836",
    ],
    [
      "--destructive",
      "#9d0006",
    ],
    [
      "--border",
      "#bdae93",
    ],
    [
      "--input",
      "#a89984",
    ],
    [
      "--ring",
      "#b57614",
    ],
    [
      "--sidebar",
      "#f2e5bc",
    ],
    [
      "--sidebar-foreground",
      "#3c3836",
    ],
    [
      "--sidebar-primary",
      "#b57614",
    ],
    [
      "--sidebar-primary-foreground",
      "#fbf1c7",
    ],
    [
      "--sidebar-accent",
      "#ebdbb2",
    ],
    [
      "--sidebar-accent-foreground",
      "#3c3836",
    ],
    [
      "--sidebar-border",
      "#bdae93",
    ],
    [
      "--sidebar-ring",
      "#b57614",
    ],
    [
      "--radius",
      "0.25rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "2px",
    ],
    [
      "--frame-radius",
      "8px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#f9f5d7",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#f9f5d7",
    ],
    [
      "--terminal-foreground",
      "#3c3836",
    ],
    [
      "--terminal-cursor",
      "#3c3836",
    ],
    [
      "--terminal-cursor-accent",
      "#f9f5d7",
    ],
    [
      "--terminal-selection",
      "rgba(181,118,20,0.22)",
    ],
    [
      "--terminal-ansi-black",
      "#282828",
    ],
    [
      "--terminal-ansi-red",
      "#9d0006",
    ],
    [
      "--terminal-ansi-green",
      "#767108",
    ],
    [
      "--terminal-ansi-yellow",
      "#9e6000",
    ],
    [
      "--terminal-ansi-blue",
      "#076678",
    ],
    [
      "--terminal-ansi-magenta",
      "#8f3f71",
    ],
    [
      "--terminal-ansi-cyan",
      "#407957",
    ],
    [
      "--terminal-ansi-white",
      "#796c62",
    ],
    [
      "--terminal-ansi-bright-black",
      "#928374",
    ],
    [
      "--terminal-ansi-bright-red",
      "#cc241d",
    ],
    [
      "--terminal-ansi-bright-green",
      "#918f08",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#bb7f00",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#458588",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#b16286",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#639765",
    ],
    [
      "--terminal-ansi-bright-white",
      "#3c3836",
    ],
    [
      "--syntax-comment",
      "#928374",
    ],
    [
      "--syntax-keyword",
      "#8f3f71",
    ],
    [
      "--syntax-string",
      "#767007",
    ],
    [
      "--syntax-number",
      "#9d6000",
    ],
    [
      "--syntax-constant",
      "#a25579",
    ],
    [
      "--syntax-func",
      "#076678",
    ],
    [
      "--syntax-variable",
      "#3c3836",
    ],
    [
      "--syntax-property",
      "#407957",
    ],
    [
      "--syntax-gutter-fg",
      "#928374",
    ],
    [
      "--syntax-type",
      "#477949",
    ],
    [
      "--syntax-operator",
      "#3c3836",
    ],
    [
      "--syntax-tag",
      "#9d0006",
    ],
    [
      "--syntax-tag-bracket",
      "#928374",
    ],
    [
      "--syntax-attr",
      "#9b6100",
    ],
    [
      "--syntax-attr-value",
      "#767007",
    ],
    [
      "--syntax-heading",
      "#076678",
    ],
    [
      "--syntax-link",
      "#407957",
    ],
    [
      "--syntax-invalid",
      "#cc241d",
    ],
    [
      "--status-added",
      "#767007",
    ],
    [
      "--status-modified",
      "#9d6000",
    ],
    [
      "--status-deleted",
      "#9d0006",
    ],
    [
      "--status-renamed",
      "#076678",
    ],
    [
      "--status-warning",
      "#9d6000",
    ],
    [
      "--status-conflict",
      "#407957",
    ],
    [
      "--status-ok",
      "#767007",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "50%",
    ],
    [
      "--emph-medium",
      "62%",
    ],
    [
      "--emph-strong",
      "75%",
    ],
    [
      "--emph-bold",
      "95%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-dark 1`] = `
{
  "id": "kanagawa",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#1f1f28",
    ],
    [
      "--foreground",
      "#dcd7ba",
    ],
    [
      "--card",
      "#16161d",
    ],
    [
      "--card-foreground",
      "#dcd7ba",
    ],
    [
      "--popover",
      "#16161d",
    ],
    [
      "--popover-foreground",
      "#dcd7ba",
    ],
    [
      "--primary",
      "#7e9cd8",
    ],
    [
      "--primary-foreground",
      "#1f1f28",
    ],
    [
      "--secondary",
      "#2a2a37",
    ],
    [
      "--secondary-foreground",
      "#dcd7ba",
    ],
    [
      "--muted",
      "#2a2a37",
    ],
    [
      "--muted-foreground",
      "#a09f96",
    ],
    [
      "--accent",
      "#363646",
    ],
    [
      "--accent-foreground",
      "#dcd7ba",
    ],
    [
      "--destructive",
      "#c34043",
    ],
    [
      "--border",
      "#38384a",
    ],
    [
      "--input",
      "#4a4a5e",
    ],
    [
      "--ring",
      "#7e9cd8",
    ],
    [
      "--sidebar",
      "#16161d",
    ],
    [
      "--sidebar-foreground",
      "#dcd7ba",
    ],
    [
      "--sidebar-primary",
      "#7e9cd8",
    ],
    [
      "--sidebar-primary-foreground",
      "#1f1f28",
    ],
    [
      "--sidebar-accent",
      "#2a2a37",
    ],
    [
      "--sidebar-accent-foreground",
      "#dcd7ba",
    ],
    [
      "--sidebar-border",
      "#38384a",
    ],
    [
      "--sidebar-ring",
      "#7e9cd8",
    ],
    [
      "--radius",
      "0.5rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#2a2a37",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#1f1f28",
    ],
    [
      "--terminal-foreground",
      "#dcd7ba",
    ],
    [
      "--terminal-cursor",
      "#c8c093",
    ],
    [
      "--terminal-cursor-accent",
      "#1f1f28",
    ],
    [
      "--terminal-selection",
      "rgba(45,79,103,0.45)",
    ],
    [
      "--terminal-ansi-black",
      "#090618",
    ],
    [
      "--terminal-ansi-red",
      "#e25c5c",
    ],
    [
      "--terminal-ansi-green",
      "#76946a",
    ],
    [
      "--terminal-ansi-yellow",
      "#c0a36e",
    ],
    [
      "--terminal-ansi-blue",
      "#7e9cd8",
    ],
    [
      "--terminal-ansi-magenta",
      "#957fb8",
    ],
    [
      "--terminal-ansi-cyan",
      "#6a9589",
    ],
    [
      "--terminal-ansi-white",
      "#c8c093",
    ],
    [
      "--terminal-ansi-bright-black",
      "#727169",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ff5d62",
    ],
    [
      "--terminal-ansi-bright-green",
      "#98bb6c",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#e6c384",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#7fb4ca",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#938aa9",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7aa89f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#dcd7ba",
    ],
    [
      "--syntax-comment",
      "#727169",
    ],
    [
      "--syntax-keyword",
      "#957fb8",
    ],
    [
      "--syntax-string",
      "#76946a",
    ],
    [
      "--syntax-number",
      "#c0a36e",
    ],
    [
      "--syntax-constant",
      "#938aa9",
    ],
    [
      "--syntax-func",
      "#7e9cd8",
    ],
    [
      "--syntax-variable",
      "#dcd7ba",
    ],
    [
      "--syntax-property",
      "#6a9589",
    ],
    [
      "--syntax-gutter-fg",
      "#727169",
    ],
    [
      "--syntax-type",
      "#7aa89f",
    ],
    [
      "--syntax-operator",
      "#dcd7ba",
    ],
    [
      "--syntax-tag",
      "#e25c5c",
    ],
    [
      "--syntax-tag-bracket",
      "#727169",
    ],
    [
      "--syntax-attr",
      "#e6c384",
    ],
    [
      "--syntax-attr-value",
      "#76946a",
    ],
    [
      "--syntax-heading",
      "#7e9cd8",
    ],
    [
      "--syntax-link",
      "#6a9589",
    ],
    [
      "--syntax-invalid",
      "#ff5d62",
    ],
    [
      "--status-added",
      "#76946a",
    ],
    [
      "--status-modified",
      "#c0a36e",
    ],
    [
      "--status-deleted",
      "#e25c5c",
    ],
    [
      "--status-renamed",
      "#7e9cd8",
    ],
    [
      "--status-warning",
      "#c0a36e",
    ],
    [
      "--status-conflict",
      "#6a9589",
    ],
    [
      "--status-ok",
      "#76946a",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "35%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "90%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-dragon-dark 1`] = `
{
  "id": "kanagawa-dragon",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#181616",
    ],
    [
      "--foreground",
      "#c5c9c5",
    ],
    [
      "--card",
      "#0d0c0c",
    ],
    [
      "--card-foreground",
      "#c5c9c5",
    ],
    [
      "--popover",
      "#0d0c0c",
    ],
    [
      "--popover-foreground",
      "#c5c9c5",
    ],
    [
      "--primary",
      "#8ba4b0",
    ],
    [
      "--primary-foreground",
      "#181616",
    ],
    [
      "--secondary",
      "#282727",
    ],
    [
      "--secondary-foreground",
      "#c5c9c5",
    ],
    [
      "--muted",
      "#282727",
    ],
    [
      "--muted-foreground",
      "#a6a69c",
    ],
    [
      "--accent",
      "#393836",
    ],
    [
      "--accent-foreground",
      "#c5c9c5",
    ],
    [
      "--destructive",
      "#c4746e",
    ],
    [
      "--border",
      "#3a3937",
    ],
    [
      "--input",
      "#4d4b48",
    ],
    [
      "--ring",
      "#8ba4b0",
    ],
    [
      "--sidebar",
      "#0d0c0c",
    ],
    [
      "--sidebar-foreground",
      "#c5c9c5",
    ],
    [
      "--sidebar-primary",
      "#8ba4b0",
    ],
    [
      "--sidebar-primary-foreground",
      "#181616",
    ],
    [
      "--sidebar-accent",
      "#282727",
    ],
    [
      "--sidebar-accent-foreground",
      "#c5c9c5",
    ],
    [
      "--sidebar-border",
      "#3a3937",
    ],
    [
      "--sidebar-ring",
      "#8ba4b0",
    ],
    [
      "--radius",
      "0.5rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#282727",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#181616",
    ],
    [
      "--terminal-foreground",
      "#c5c9c5",
    ],
    [
      "--terminal-cursor",
      "#c5c9c5",
    ],
    [
      "--terminal-cursor-accent",
      "#181616",
    ],
    [
      "--terminal-selection",
      "rgba(45,79,103,0.45)",
    ],
    [
      "--terminal-ansi-black",
      "#0d0c0c",
    ],
    [
      "--terminal-ansi-red",
      "#c4746e",
    ],
    [
      "--terminal-ansi-green",
      "#8a9a7b",
    ],
    [
      "--terminal-ansi-yellow",
      "#c4b28a",
    ],
    [
      "--terminal-ansi-blue",
      "#8ba4b0",
    ],
    [
      "--terminal-ansi-magenta",
      "#a292a3",
    ],
    [
      "--terminal-ansi-cyan",
      "#8ea4a2",
    ],
    [
      "--terminal-ansi-white",
      "#c8c093",
    ],
    [
      "--terminal-ansi-bright-black",
      "#a6a69c",
    ],
    [
      "--terminal-ansi-bright-red",
      "#e46876",
    ],
    [
      "--terminal-ansi-bright-green",
      "#87a987",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#e6c384",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#7fb4ca",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#938aa9",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7aa89f",
    ],
    [
      "--terminal-ansi-bright-white",
      "#c5c9c5",
    ],
    [
      "--syntax-comment",
      "#a6a69c",
    ],
    [
      "--syntax-keyword",
      "#a292a3",
    ],
    [
      "--syntax-string",
      "#8a9a7b",
    ],
    [
      "--syntax-number",
      "#c4b28a",
    ],
    [
      "--syntax-constant",
      "#938aa9",
    ],
    [
      "--syntax-func",
      "#8ba4b0",
    ],
    [
      "--syntax-variable",
      "#c5c9c5",
    ],
    [
      "--syntax-property",
      "#8ea4a2",
    ],
    [
      "--syntax-gutter-fg",
      "#a6a69c",
    ],
    [
      "--syntax-type",
      "#7aa89f",
    ],
    [
      "--syntax-operator",
      "#c5c9c5",
    ],
    [
      "--syntax-tag",
      "#c4746e",
    ],
    [
      "--syntax-tag-bracket",
      "#a6a69c",
    ],
    [
      "--syntax-attr",
      "#e6c384",
    ],
    [
      "--syntax-attr-value",
      "#8a9a7b",
    ],
    [
      "--syntax-heading",
      "#8ba4b0",
    ],
    [
      "--syntax-link",
      "#8ea4a2",
    ],
    [
      "--syntax-invalid",
      "#e46876",
    ],
    [
      "--status-added",
      "#8a9a7b",
    ],
    [
      "--status-modified",
      "#c4b28a",
    ],
    [
      "--status-deleted",
      "#c4746e",
    ],
    [
      "--status-renamed",
      "#8ba4b0",
    ],
    [
      "--status-warning",
      "#c4b28a",
    ],
    [
      "--status-conflict",
      "#8ea4a2",
    ],
    [
      "--status-ok",
      "#8a9a7b",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "35%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "90%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-dragon-light 1`] = `
{
  "id": "kanagawa-dragon",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#e6e2da",
    ],
    [
      "--foreground",
      "#383630",
    ],
    [
      "--card",
      "#ddd8ce",
    ],
    [
      "--card-foreground",
      "#383630",
    ],
    [
      "--popover",
      "#efece5",
    ],
    [
      "--popover-foreground",
      "#383630",
    ],
    [
      "--primary",
      "#4a6570",
    ],
    [
      "--primary-foreground",
      "#efece5",
    ],
    [
      "--secondary",
      "#ddd8ce",
    ],
    [
      "--secondary-foreground",
      "#383630",
    ],
    [
      "--muted",
      "#ddd8ce",
    ],
    [
      "--muted-foreground",
      "#5f5c53",
    ],
    [
      "--accent",
      "#d2ccc0",
    ],
    [
      "--accent-foreground",
      "#383630",
    ],
    [
      "--destructive",
      "#9d4f49",
    ],
    [
      "--border",
      "#b4ada0",
    ],
    [
      "--input",
      "#a29a8c",
    ],
    [
      "--ring",
      "#4a6570",
    ],
    [
      "--sidebar",
      "#ddd8ce",
    ],
    [
      "--sidebar-foreground",
      "#383630",
    ],
    [
      "--sidebar-primary",
      "#4a6570",
    ],
    [
      "--sidebar-primary-foreground",
      "#efece5",
    ],
    [
      "--sidebar-accent",
      "#d2ccc0",
    ],
    [
      "--sidebar-accent-foreground",
      "#383630",
    ],
    [
      "--sidebar-border",
      "#b4ada0",
    ],
    [
      "--sidebar-ring",
      "#4a6570",
    ],
    [
      "--radius",
      "0.5rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#efece5",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#ebe8e1",
    ],
    [
      "--terminal-foreground",
      "#383630",
    ],
    [
      "--terminal-cursor",
      "#4a6570",
    ],
    [
      "--terminal-cursor-accent",
      "#ebe8e1",
    ],
    [
      "--terminal-selection",
      "rgba(74,101,112,0.22)",
    ],
    [
      "--terminal-ansi-black",
      "#2b2926",
    ],
    [
      "--terminal-ansi-red",
      "#9d4f49",
    ],
    [
      "--terminal-ansi-green",
      "#5a6b4b",
    ],
    [
      "--terminal-ansi-yellow",
      "#78643f",
    ],
    [
      "--terminal-ansi-blue",
      "#4a6570",
    ],
    [
      "--terminal-ansi-magenta",
      "#6b5f6c",
    ],
    [
      "--terminal-ansi-cyan",
      "#4e6663",
    ],
    [
      "--terminal-ansi-white",
      "#55524a",
    ],
    [
      "--terminal-ansi-bright-black",
      "#7d7a71",
    ],
    [
      "--terminal-ansi-bright-red",
      "#b06a63",
    ],
    [
      "--terminal-ansi-bright-green",
      "#6f8060",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#957f57",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#5e7c88",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#837585",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#63807c",
    ],
    [
      "--terminal-ansi-bright-white",
      "#383630",
    ],
    [
      "--syntax-comment",
      "#7d7a71",
    ],
    [
      "--syntax-keyword",
      "#6b5f6c",
    ],
    [
      "--syntax-string",
      "#5a6a4b",
    ],
    [
      "--syntax-number",
      "#76623e",
    ],
    [
      "--syntax-constant",
      "#6e6170",
    ],
    [
      "--syntax-func",
      "#4a6570",
    ],
    [
      "--syntax-variable",
      "#383630",
    ],
    [
      "--syntax-property",
      "#4e6663",
    ],
    [
      "--syntax-gutter-fg",
      "#7d7a71",
    ],
    [
      "--syntax-type",
      "#4e6a67",
    ],
    [
      "--syntax-operator",
      "#383630",
    ],
    [
      "--syntax-tag",
      "#9c4e49",
    ],
    [
      "--syntax-tag-bracket",
      "#7d7a71",
    ],
    [
      "--syntax-attr",
      "#78623b",
    ],
    [
      "--syntax-attr-value",
      "#5a6a4b",
    ],
    [
      "--syntax-heading",
      "#4a6570",
    ],
    [
      "--syntax-link",
      "#4e6663",
    ],
    [
      "--syntax-invalid",
      "#96524c",
    ],
    [
      "--status-added",
      "#546445",
    ],
    [
      "--status-modified",
      "#705c39",
    ],
    [
      "--status-deleted",
      "#954843",
    ],
    [
      "--status-renamed",
      "#48636e",
    ],
    [
      "--status-warning",
      "#705c39",
    ],
    [
      "--status-conflict",
      "#4c6361",
    ],
    [
      "--status-ok",
      "#546445",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "35%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "90%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > kanagawa-light 1`] = `
{
  "id": "kanagawa",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#f2ecbc",
    ],
    [
      "--foreground",
      "#545464",
    ],
    [
      "--card",
      "#e5ddb0",
    ],
    [
      "--card-foreground",
      "#545464",
    ],
    [
      "--popover",
      "#e5ddb0",
    ],
    [
      "--popover-foreground",
      "#545464",
    ],
    [
      "--primary",
      "#4d699b",
    ],
    [
      "--primary-foreground",
      "#f2ecbc",
    ],
    [
      "--secondary",
      "#e5ddb0",
    ],
    [
      "--secondary-foreground",
      "#545464",
    ],
    [
      "--muted",
      "#e5ddb0",
    ],
    [
      "--muted-foreground",
      "#616058",
    ],
    [
      "--accent",
      "#dcd5ac",
    ],
    [
      "--accent-foreground",
      "#545464",
    ],
    [
      "--destructive",
      "#c84053",
    ],
    [
      "--border",
      "#c5bd90",
    ],
    [
      "--input",
      "#b3aa7d",
    ],
    [
      "--ring",
      "#4d699b",
    ],
    [
      "--sidebar",
      "#e5ddb0",
    ],
    [
      "--sidebar-foreground",
      "#545464",
    ],
    [
      "--sidebar-primary",
      "#4d699b",
    ],
    [
      "--sidebar-primary-foreground",
      "#f2ecbc",
    ],
    [
      "--sidebar-accent",
      "#dcd5ac",
    ],
    [
      "--sidebar-accent-foreground",
      "#545464",
    ],
    [
      "--sidebar-border",
      "#c5bd90",
    ],
    [
      "--sidebar-ring",
      "#4d699b",
    ],
    [
      "--radius",
      "0.5rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#e7e1b6",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#eceadf",
    ],
    [
      "--terminal-foreground",
      "#545464",
    ],
    [
      "--terminal-cursor",
      "#43436c",
    ],
    [
      "--terminal-cursor-accent",
      "#eceadf",
    ],
    [
      "--terminal-selection",
      "rgba(200,190,140,0.55)",
    ],
    [
      "--terminal-ansi-black",
      "#1f1f28",
    ],
    [
      "--terminal-ansi-red",
      "#bd354a",
    ],
    [
      "--terminal-ansi-green",
      "#577036",
    ],
    [
      "--terminal-ansi-yellow",
      "#706938",
    ],
    [
      "--terminal-ansi-blue",
      "#4d689a",
    ],
    [
      "--terminal-ansi-magenta",
      "#a24c6a",
    ],
    [
      "--terminal-ansi-cyan",
      "#4d6e69",
    ],
    [
      "--terminal-ansi-white",
      "#545464",
    ],
    [
      "--terminal-ansi-bright-black",
      "#85847c",
    ],
    [
      "--terminal-ansi-bright-red",
      "#d7474b",
    ],
    [
      "--terminal-ansi-bright-green",
      "#6b8d5c",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#836f4a",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#5b87b3",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#624c83",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#5e857a",
    ],
    [
      "--terminal-ansi-bright-white",
      "#43436c",
    ],
    [
      "--syntax-comment",
      "#85847c",
    ],
    [
      "--syntax-keyword",
      "#a24c6a",
    ],
    [
      "--syntax-string",
      "#577036",
    ],
    [
      "--syntax-number",
      "#706938",
    ],
    [
      "--syntax-constant",
      "#624c83",
    ],
    [
      "--syntax-func",
      "#4d689a",
    ],
    [
      "--syntax-variable",
      "#545464",
    ],
    [
      "--syntax-property",
      "#4d6e69",
    ],
    [
      "--syntax-gutter-fg",
      "#85847c",
    ],
    [
      "--syntax-type",
      "#4b7167",
    ],
    [
      "--syntax-operator",
      "#545464",
    ],
    [
      "--syntax-tag",
      "#bd354a",
    ],
    [
      "--syntax-tag-bracket",
      "#85847c",
    ],
    [
      "--syntax-attr",
      "#7b6743",
    ],
    [
      "--syntax-attr-value",
      "#577036",
    ],
    [
      "--syntax-heading",
      "#4d689a",
    ],
    [
      "--syntax-link",
      "#4d6e69",
    ],
    [
      "--syntax-invalid",
      "#c3343b",
    ],
    [
      "--status-added",
      "#50682f",
    ],
    [
      "--status-modified",
      "#696232",
    ],
    [
      "--status-deleted",
      "#b42c43",
    ],
    [
      "--status-renamed",
      "#476193",
    ],
    [
      "--status-warning",
      "#696232",
    ],
    [
      "--status-conflict",
      "#476763",
    ],
    [
      "--status-ok",
      "#50682f",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "35%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "90%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > nothing-dark 1`] = `
{
  "id": "nothing",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#0b0b0b",
    ],
    [
      "--foreground",
      "#f2f2f2",
    ],
    [
      "--card",
      "#151515",
    ],
    [
      "--card-foreground",
      "#f2f2f2",
    ],
    [
      "--popover",
      "#1c1c1c",
    ],
    [
      "--popover-foreground",
      "#f2f2f2",
    ],
    [
      "--primary",
      "#d63b2e",
    ],
    [
      "--primary-foreground",
      "#ffffff",
    ],
    [
      "--secondary",
      "#1a1a1a",
    ],
    [
      "--secondary-foreground",
      "#e6e6e6",
    ],
    [
      "--muted",
      "#141414",
    ],
    [
      "--muted-foreground",
      "#8a8a8a",
    ],
    [
      "--accent",
      "#181818",
    ],
    [
      "--accent-foreground",
      "#f2f2f2",
    ],
    [
      "--destructive",
      "#d63b2e",
    ],
    [
      "--border",
      "#3a3a3a",
    ],
    [
      "--input",
      "#3a3a3a",
    ],
    [
      "--ring",
      "#d63b2e",
    ],
    [
      "--sidebar",
      "#000000",
    ],
    [
      "--sidebar-foreground",
      "#f2f2f2",
    ],
    [
      "--sidebar-primary",
      "#d63b2e",
    ],
    [
      "--sidebar-primary-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-accent",
      "#181818",
    ],
    [
      "--sidebar-accent-foreground",
      "#f2f2f2",
    ],
    [
      "--sidebar-border",
      "#3a3a3a",
    ],
    [
      "--sidebar-ring",
      "#d63b2e",
    ],
    [
      "--radius",
      "0.25rem",
    ],
    [
      "--border-style",
      "dotted",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "10px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Space Grotesk', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'DotGothic16', monospace",
    ],
    [
      "--chrome-tracking",
      "0.02em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#0b0b0b",
    ],
    [
      "--terminal-foreground",
      "#f2f2f2",
    ],
    [
      "--terminal-cursor",
      "#d63b2e",
    ],
    [
      "--terminal-cursor-accent",
      "#0b0b0b",
    ],
    [
      "--terminal-selection",
      "rgba(214, 59, 46, 0.32)",
    ],
    [
      "--terminal-ansi-black",
      "#2a2a2a",
    ],
    [
      "--terminal-ansi-red",
      "#dd4335",
    ],
    [
      "--terminal-ansi-green",
      "#6a9c8a",
    ],
    [
      "--terminal-ansi-yellow",
      "#e0b84a",
    ],
    [
      "--terminal-ansi-blue",
      "#5a8fc2",
    ],
    [
      "--terminal-ansi-magenta",
      "#a878b0",
    ],
    [
      "--terminal-ansi-cyan",
      "#6a9c9c",
    ],
    [
      "--terminal-ansi-white",
      "#c6c6c6",
    ],
    [
      "--terminal-ansi-bright-black",
      "#8a8a8a",
    ],
    [
      "--terminal-ansi-bright-red",
      "#f05344",
    ],
    [
      "--terminal-ansi-bright-green",
      "#7dae9b",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#ebd06a",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#6ca2d4",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#b98bc1",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#7daeae",
    ],
    [
      "--terminal-ansi-bright-white",
      "#f2f2f2",
    ],
    [
      "--syntax-comment",
      "#8a8a8a",
    ],
    [
      "--syntax-keyword",
      "#a878b0",
    ],
    [
      "--syntax-string",
      "#6a9c8a",
    ],
    [
      "--syntax-number",
      "#e0b84a",
    ],
    [
      "--syntax-constant",
      "#b98bc1",
    ],
    [
      "--syntax-func",
      "#5a8fc2",
    ],
    [
      "--syntax-variable",
      "#f2f2f2",
    ],
    [
      "--syntax-property",
      "#6a9c9c",
    ],
    [
      "--syntax-gutter-fg",
      "#8a8a8a",
    ],
    [
      "--syntax-type",
      "#7daeae",
    ],
    [
      "--syntax-operator",
      "#f2f2f2",
    ],
    [
      "--syntax-tag",
      "#dd4335",
    ],
    [
      "--syntax-tag-bracket",
      "#8a8a8a",
    ],
    [
      "--syntax-attr",
      "#ebd06a",
    ],
    [
      "--syntax-attr-value",
      "#6a9c8a",
    ],
    [
      "--syntax-heading",
      "#5a8fc2",
    ],
    [
      "--syntax-link",
      "#6a9c9c",
    ],
    [
      "--syntax-invalid",
      "#f05344",
    ],
    [
      "--status-added",
      "#6a9c8a",
    ],
    [
      "--status-modified",
      "#e0b84a",
    ],
    [
      "--status-deleted",
      "#e24739",
    ],
    [
      "--status-renamed",
      "#5a8fc2",
    ],
    [
      "--status-warning",
      "#e0b84a",
    ],
    [
      "--status-conflict",
      "#6a9c9c",
    ],
    [
      "--status-ok",
      "#6a9c8a",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "32%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "88%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > nothing-light 1`] = `
{
  "id": "nothing",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#f7f7f7",
    ],
    [
      "--foreground",
      "#111111",
    ],
    [
      "--card",
      "#ffffff",
    ],
    [
      "--card-foreground",
      "#111111",
    ],
    [
      "--popover",
      "#ffffff",
    ],
    [
      "--popover-foreground",
      "#111111",
    ],
    [
      "--primary",
      "#c8342a",
    ],
    [
      "--primary-foreground",
      "#ffffff",
    ],
    [
      "--secondary",
      "#ececec",
    ],
    [
      "--secondary-foreground",
      "#111111",
    ],
    [
      "--muted",
      "#eeeeee",
    ],
    [
      "--muted-foreground",
      "#666666",
    ],
    [
      "--accent",
      "#e8e8e8",
    ],
    [
      "--accent-foreground",
      "#111111",
    ],
    [
      "--destructive",
      "#c8342a",
    ],
    [
      "--border",
      "#b8b8b8",
    ],
    [
      "--input",
      "#b8b8b8",
    ],
    [
      "--ring",
      "#c8342a",
    ],
    [
      "--sidebar",
      "#eaeaea",
    ],
    [
      "--sidebar-foreground",
      "#111111",
    ],
    [
      "--sidebar-primary",
      "#c8342a",
    ],
    [
      "--sidebar-primary-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-accent",
      "#e0e0e0",
    ],
    [
      "--sidebar-accent-foreground",
      "#111111",
    ],
    [
      "--sidebar-border",
      "#b8b8b8",
    ],
    [
      "--sidebar-ring",
      "#c8342a",
    ],
    [
      "--radius",
      "0.25rem",
    ],
    [
      "--border-style",
      "dotted",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "10px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Space Grotesk', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'DotGothic16', monospace",
    ],
    [
      "--chrome-tracking",
      "0.02em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#f7f7f7",
    ],
    [
      "--terminal-foreground",
      "#111111",
    ],
    [
      "--terminal-cursor",
      "#c8342a",
    ],
    [
      "--terminal-cursor-accent",
      "#f7f7f7",
    ],
    [
      "--terminal-selection",
      "rgba(200, 52, 42, 0.22)",
    ],
    [
      "--terminal-ansi-black",
      "#e0e0e0",
    ],
    [
      "--terminal-ansi-red",
      "#c8342a",
    ],
    [
      "--terminal-ansi-green",
      "#2e7d5b",
    ],
    [
      "--terminal-ansi-yellow",
      "#976700",
    ],
    [
      "--terminal-ansi-blue",
      "#2b6cb0",
    ],
    [
      "--terminal-ansi-magenta",
      "#7f58d3",
    ],
    [
      "--terminal-ansi-cyan",
      "#2c7a7b",
    ],
    [
      "--terminal-ansi-white",
      "#3a3a3a",
    ],
    [
      "--terminal-ansi-bright-black",
      "#666666",
    ],
    [
      "--terminal-ansi-bright-red",
      "#a82e23",
    ],
    [
      "--terminal-ansi-bright-green",
      "#236347",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#825a00",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#22548a",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#6b46c1",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#236162",
    ],
    [
      "--terminal-ansi-bright-white",
      "#111111",
    ],
    [
      "--syntax-comment",
      "#666666",
    ],
    [
      "--syntax-keyword",
      "#7f58d3",
    ],
    [
      "--syntax-string",
      "#2e7d5b",
    ],
    [
      "--syntax-number",
      "#976700",
    ],
    [
      "--syntax-constant",
      "#6b46c1",
    ],
    [
      "--syntax-func",
      "#2b6cb0",
    ],
    [
      "--syntax-variable",
      "#111111",
    ],
    [
      "--syntax-property",
      "#2c7a7b",
    ],
    [
      "--syntax-gutter-fg",
      "#666666",
    ],
    [
      "--syntax-type",
      "#236162",
    ],
    [
      "--syntax-operator",
      "#111111",
    ],
    [
      "--syntax-tag",
      "#c8342a",
    ],
    [
      "--syntax-tag-bracket",
      "#666666",
    ],
    [
      "--syntax-attr",
      "#825a00",
    ],
    [
      "--syntax-attr-value",
      "#2e7d5b",
    ],
    [
      "--syntax-heading",
      "#2b6cb0",
    ],
    [
      "--syntax-link",
      "#2c7a7b",
    ],
    [
      "--syntax-invalid",
      "#a82e23",
    ],
    [
      "--status-added",
      "#2e7d5b",
    ],
    [
      "--status-modified",
      "#976700",
    ],
    [
      "--status-deleted",
      "#c8342a",
    ],
    [
      "--status-renamed",
      "#2b6cb0",
    ],
    [
      "--status-warning",
      "#976700",
    ],
    [
      "--status-conflict",
      "#2c7a7b",
    ],
    [
      "--status-ok",
      "#2e7d5b",
    ],
    [
      "--emph-faint",
      "12%",
    ],
    [
      "--emph-subtle",
      "32%",
    ],
    [
      "--emph-soft",
      "45%",
    ],
    [
      "--emph-medium",
      "55%",
    ],
    [
      "--emph-strong",
      "68%",
    ],
    [
      "--emph-bold",
      "88%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > stardew-dark 1`] = `
{
  "id": "stardew",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#241609",
    ],
    [
      "--foreground",
      "#f2dcc0",
    ],
    [
      "--card",
      "#33200e",
    ],
    [
      "--card-foreground",
      "#f2dcc0",
    ],
    [
      "--popover",
      "#3d2712",
    ],
    [
      "--popover-foreground",
      "#f2dcc0",
    ],
    [
      "--primary",
      "#e8a33d",
    ],
    [
      "--primary-foreground",
      "#241609",
    ],
    [
      "--secondary",
      "#2e1d0d",
    ],
    [
      "--secondary-foreground",
      "#f2dcc0",
    ],
    [
      "--muted",
      "#2e1d0d",
    ],
    [
      "--muted-foreground",
      "#b89a78",
    ],
    [
      "--accent",
      "#4a2e14",
    ],
    [
      "--accent-foreground",
      "#f2dcc0",
    ],
    [
      "--destructive",
      "#c4453a",
    ],
    [
      "--border",
      "#6b4423",
    ],
    [
      "--input",
      "#6b4423",
    ],
    [
      "--ring",
      "#e8a33d",
    ],
    [
      "--sidebar",
      "#150d06",
    ],
    [
      "--sidebar-foreground",
      "#f2dcc0",
    ],
    [
      "--sidebar-primary",
      "#e8a33d",
    ],
    [
      "--sidebar-primary-foreground",
      "#241609",
    ],
    [
      "--sidebar-accent",
      "#4a2e14",
    ],
    [
      "--sidebar-accent-foreground",
      "#f2dcc0",
    ],
    [
      "--sidebar-border",
      "#6b4423",
    ],
    [
      "--sidebar-ring",
      "#e8a33d",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#7a5228",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#0d0703",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#1e1208",
    ],
    [
      "--terminal-foreground",
      "#f2dcc0",
    ],
    [
      "--terminal-cursor",
      "#e8a33d",
    ],
    [
      "--terminal-cursor-accent",
      "#1e1208",
    ],
    [
      "--terminal-selection",
      "rgba(232,163,61,0.30)",
    ],
    [
      "--terminal-ansi-black",
      "#2a1a0c",
    ],
    [
      "--terminal-ansi-red",
      "#f0685a",
    ],
    [
      "--terminal-ansi-green",
      "#9ac356",
    ],
    [
      "--terminal-ansi-yellow",
      "#eec052",
    ],
    [
      "--terminal-ansi-blue",
      "#74b0e2",
    ],
    [
      "--terminal-ansi-magenta",
      "#dc8ec2",
    ],
    [
      "--terminal-ansi-cyan",
      "#6cc9bf",
    ],
    [
      "--terminal-ansi-white",
      "#e3cfa5",
    ],
    [
      "--terminal-ansi-bright-black",
      "#ac8558",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ff9086",
    ],
    [
      "--terminal-ansi-bright-green",
      "#bde383",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#ffdf88",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#a3d0f5",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#f2b4da",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#9ae8dd",
    ],
    [
      "--terminal-ansi-bright-white",
      "#fff6e0",
    ],
    [
      "--syntax-comment",
      "#ac8558",
    ],
    [
      "--syntax-keyword",
      "#dc8ec2",
    ],
    [
      "--syntax-string",
      "#9ac356",
    ],
    [
      "--syntax-number",
      "#eec052",
    ],
    [
      "--syntax-constant",
      "#f2b4da",
    ],
    [
      "--syntax-func",
      "#74b0e2",
    ],
    [
      "--syntax-variable",
      "#f2dcc0",
    ],
    [
      "--syntax-property",
      "#6cc9bf",
    ],
    [
      "--syntax-gutter-fg",
      "#ac8558",
    ],
    [
      "--syntax-type",
      "#9ae8dd",
    ],
    [
      "--syntax-operator",
      "#f2dcc0",
    ],
    [
      "--syntax-tag",
      "#f0685a",
    ],
    [
      "--syntax-tag-bracket",
      "#ac8558",
    ],
    [
      "--syntax-attr",
      "#ffdf88",
    ],
    [
      "--syntax-attr-value",
      "#9ac356",
    ],
    [
      "--syntax-heading",
      "#74b0e2",
    ],
    [
      "--syntax-link",
      "#6cc9bf",
    ],
    [
      "--syntax-invalid",
      "#ff9086",
    ],
    [
      "--status-added",
      "#9ac356",
    ],
    [
      "--status-modified",
      "#eec052",
    ],
    [
      "--status-deleted",
      "#f0685a",
    ],
    [
      "--status-renamed",
      "#74b0e2",
    ],
    [
      "--status-warning",
      "#eec052",
    ],
    [
      "--status-conflict",
      "#6cc9bf",
    ],
    [
      "--status-ok",
      "#9ac356",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > stardew-light 1`] = `
{
  "id": "stardew",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#f4e4c1",
    ],
    [
      "--foreground",
      "#3b2712",
    ],
    [
      "--card",
      "#e9d4a8",
    ],
    [
      "--card-foreground",
      "#3b2712",
    ],
    [
      "--popover",
      "#fbf1da",
    ],
    [
      "--popover-foreground",
      "#3b2712",
    ],
    [
      "--primary",
      "#a85d22",
    ],
    [
      "--primary-foreground",
      "#fbf1da",
    ],
    [
      "--secondary",
      "#e3d0a4",
    ],
    [
      "--secondary-foreground",
      "#3b2712",
    ],
    [
      "--muted",
      "#e3d0a4",
    ],
    [
      "--muted-foreground",
      "#6b5335",
    ],
    [
      "--accent",
      "#e3b970",
    ],
    [
      "--accent-foreground",
      "#3b2712",
    ],
    [
      "--destructive",
      "#a3342a",
    ],
    [
      "--border",
      "#7a5228",
    ],
    [
      "--input",
      "#7a5228",
    ],
    [
      "--ring",
      "#a85d22",
    ],
    [
      "--sidebar",
      "#e0c795",
    ],
    [
      "--sidebar-foreground",
      "#3b2712",
    ],
    [
      "--sidebar-primary",
      "#a85d22",
    ],
    [
      "--sidebar-primary-foreground",
      "#fbf1da",
    ],
    [
      "--sidebar-accent",
      "#e3b970",
    ],
    [
      "--sidebar-accent-foreground",
      "#3b2712",
    ],
    [
      "--sidebar-border",
      "#7a5228",
    ],
    [
      "--sidebar-ring",
      "#a85d22",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "2px",
    ],
    [
      "--panel-border-width",
      "2px",
    ],
    [
      "--slot-border-width",
      "2px",
    ],
    [
      "--control-border-width",
      "2px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#d9b877",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "#7a5228",
    ],
    [
      "--lift-depth",
      "2px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "'Pixelify Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0.01em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#f4e4c1",
    ],
    [
      "--terminal-foreground",
      "#3b2712",
    ],
    [
      "--terminal-cursor",
      "#a85d22",
    ],
    [
      "--terminal-cursor-accent",
      "#f4e4c1",
    ],
    [
      "--terminal-selection",
      "rgba(168,93,34,0.26)",
    ],
    [
      "--terminal-ansi-black",
      "#2b1a0c",
    ],
    [
      "--terminal-ansi-red",
      "#a3271d",
    ],
    [
      "--terminal-ansi-green",
      "#325816",
    ],
    [
      "--terminal-ansi-yellow",
      "#7a4404",
    ],
    [
      "--terminal-ansi-blue",
      "#1a4675",
    ],
    [
      "--terminal-ansi-magenta",
      "#7a2559",
    ],
    [
      "--terminal-ansi-cyan",
      "#0e5652",
    ],
    [
      "--terminal-ansi-white",
      "#5f452a",
    ],
    [
      "--terminal-ansi-bright-black",
      "#6e4f32",
    ],
    [
      "--terminal-ansi-bright-red",
      "#941f16",
    ],
    [
      "--terminal-ansi-bright-green",
      "#284d12",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#6e3d02",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#143d68",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#681c4c",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#094a46",
    ],
    [
      "--terminal-ansi-bright-white",
      "#3b2712",
    ],
    [
      "--syntax-comment",
      "#6e4f32",
    ],
    [
      "--syntax-keyword",
      "#7a2559",
    ],
    [
      "--syntax-string",
      "#325816",
    ],
    [
      "--syntax-number",
      "#7a4404",
    ],
    [
      "--syntax-constant",
      "#681c4c",
    ],
    [
      "--syntax-func",
      "#1a4675",
    ],
    [
      "--syntax-variable",
      "#3b2712",
    ],
    [
      "--syntax-property",
      "#0e5652",
    ],
    [
      "--syntax-gutter-fg",
      "#6e4f32",
    ],
    [
      "--syntax-type",
      "#094a46",
    ],
    [
      "--syntax-operator",
      "#3b2712",
    ],
    [
      "--syntax-tag",
      "#a3271d",
    ],
    [
      "--syntax-tag-bracket",
      "#6e4f32",
    ],
    [
      "--syntax-attr",
      "#6e3d02",
    ],
    [
      "--syntax-attr-value",
      "#325816",
    ],
    [
      "--syntax-heading",
      "#1a4675",
    ],
    [
      "--syntax-link",
      "#0e5652",
    ],
    [
      "--syntax-invalid",
      "#941f16",
    ],
    [
      "--status-added",
      "#325816",
    ],
    [
      "--status-modified",
      "#7a4404",
    ],
    [
      "--status-deleted",
      "#a3271d",
    ],
    [
      "--status-renamed",
      "#1a4675",
    ],
    [
      "--status-warning",
      "#7a4404",
    ],
    [
      "--status-conflict",
      "#0e5652",
    ],
    [
      "--status-ok",
      "#325816",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > terra-default-dark 1`] = `
{
  "id": "terra-default",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--card",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--card-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--popover",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--popover-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--primary",
      "oklch(0.925 0.005 214.3)",
    ],
    [
      "--primary-foreground",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--secondary",
      "oklch(0.275 0.011 216.9)",
    ],
    [
      "--secondary-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--muted",
      "oklch(0.275 0.011 216.9)",
    ],
    [
      "--muted-foreground",
      "oklch(0.723 0.014 214.4)",
    ],
    [
      "--accent",
      "oklch(0.275 0.011 216.9)",
    ],
    [
      "--accent-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--destructive",
      "oklch(0.704 0.191 22.216)",
    ],
    [
      "--border",
      "oklch(1 0 0 / 10%)",
    ],
    [
      "--input",
      "oklch(1 0 0 / 15%)",
    ],
    [
      "--ring",
      "oklch(0.56 0.021 213.5)",
    ],
    [
      "--sidebar",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--sidebar-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--sidebar-primary",
      "oklch(0.488 0.243 264.376)",
    ],
    [
      "--sidebar-primary-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--sidebar-accent",
      "oklch(0.275 0.011 216.9)",
    ],
    [
      "--sidebar-accent-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--sidebar-border",
      "oklch(1 0 0 / 10%)",
    ],
    [
      "--sidebar-ring",
      "oklch(0.56 0.021 213.5)",
    ],
    [
      "--radius",
      "0.625rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#090b0c",
    ],
    [
      "--terminal-foreground",
      "#f9fbfb",
    ],
    [
      "--terminal-cursor",
      "#f9fbfb",
    ],
    [
      "--terminal-cursor-accent",
      "#090b0c",
    ],
    [
      "--terminal-selection",
      "rgba(156,168,171,0.28)",
    ],
    [
      "--terminal-ansi-black",
      "#1b2124",
    ],
    [
      "--terminal-ansi-red",
      "#e05561",
    ],
    [
      "--terminal-ansi-green",
      "#62b47e",
    ],
    [
      "--terminal-ansi-yellow",
      "#d3a04a",
    ],
    [
      "--terminal-ansi-blue",
      "#5aa2e0",
    ],
    [
      "--terminal-ansi-magenta",
      "#b48ee0",
    ],
    [
      "--terminal-ansi-cyan",
      "#4fb3bf",
    ],
    [
      "--terminal-ansi-white",
      "#c8ced3",
    ],
    [
      "--terminal-ansi-bright-black",
      "#6b757d",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ef7078",
    ],
    [
      "--terminal-ansi-bright-green",
      "#7ecb96",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#e6b866",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#77b8ee",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#c8a6ef",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#6ecad6",
    ],
    [
      "--terminal-ansi-bright-white",
      "#eef2f4",
    ],
    [
      "--syntax-comment",
      "#6b757d",
    ],
    [
      "--syntax-keyword",
      "#b48ee0",
    ],
    [
      "--syntax-string",
      "#62b47e",
    ],
    [
      "--syntax-number",
      "#d3a04a",
    ],
    [
      "--syntax-constant",
      "#c8a6ef",
    ],
    [
      "--syntax-func",
      "#5aa2e0",
    ],
    [
      "--syntax-variable",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--syntax-property",
      "#4fb3bf",
    ],
    [
      "--syntax-gutter-fg",
      "#6b757d",
    ],
    [
      "--syntax-type",
      "#6ecad6",
    ],
    [
      "--syntax-operator",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--syntax-tag",
      "#e05561",
    ],
    [
      "--syntax-tag-bracket",
      "#6b757d",
    ],
    [
      "--syntax-attr",
      "#e6b866",
    ],
    [
      "--syntax-attr-value",
      "#62b47e",
    ],
    [
      "--syntax-heading",
      "#5aa2e0",
    ],
    [
      "--syntax-link",
      "#4fb3bf",
    ],
    [
      "--syntax-invalid",
      "#ef7078",
    ],
    [
      "--status-added",
      "#62b47e",
    ],
    [
      "--status-modified",
      "#d3a04a",
    ],
    [
      "--status-deleted",
      "#e05561",
    ],
    [
      "--status-renamed",
      "#5aa2e0",
    ],
    [
      "--status-warning",
      "#d3a04a",
    ],
    [
      "--status-conflict",
      "#4fb3bf",
    ],
    [
      "--status-ok",
      "#62b47e",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > terra-default-light 1`] = `
{
  "id": "terra-default",
  "mode": "light",
  "vars": [
    [
      "--background",
      "oklch(0.978 0.002 228.8)",
    ],
    [
      "--foreground",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--card",
      "oklch(1 0 0)",
    ],
    [
      "--card-foreground",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--popover",
      "oklch(1 0 0)",
    ],
    [
      "--popover-foreground",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--primary",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--primary-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--secondary",
      "oklch(0.963 0.002 197.1)",
    ],
    [
      "--secondary-foreground",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--muted",
      "oklch(0.963 0.002 197.1)",
    ],
    [
      "--muted-foreground",
      "oklch(0.544 0.021 213.5)",
    ],
    [
      "--accent",
      "oklch(0.963 0.002 197.1)",
    ],
    [
      "--accent-foreground",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--destructive",
      "oklch(0.577 0.245 27.325)",
    ],
    [
      "--border",
      "oklch(0.925 0.005 214.3)",
    ],
    [
      "--input",
      "oklch(0.925 0.005 214.3)",
    ],
    [
      "--ring",
      "oklch(0.723 0.014 214.4)",
    ],
    [
      "--sidebar",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--sidebar-foreground",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--sidebar-primary",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--sidebar-primary-foreground",
      "oklch(0.987 0.002 197.1)",
    ],
    [
      "--sidebar-accent",
      "oklch(0.963 0.002 197.1)",
    ],
    [
      "--sidebar-accent-foreground",
      "oklch(0.218 0.008 223.9)",
    ],
    [
      "--sidebar-border",
      "oklch(0.925 0.005 214.3)",
    ],
    [
      "--sidebar-ring",
      "oklch(0.723 0.014 214.4)",
    ],
    [
      "--radius",
      "0.625rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "1px",
    ],
    [
      "--frame-radius",
      "12px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "0px",
    ],
    [
      "--bevel-outer",
      "transparent",
    ],
    [
      "--bevel-mid",
      "transparent",
    ],
    [
      "--bevel-inner",
      "transparent",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--terminal-background",
      "#f6f8f9",
    ],
    [
      "--terminal-foreground",
      "#090b0c",
    ],
    [
      "--terminal-cursor",
      "#090b0c",
    ],
    [
      "--terminal-cursor-accent",
      "#f6f8f9",
    ],
    [
      "--terminal-selection",
      "rgba(103,120,124,0.22)",
    ],
    [
      "--terminal-ansi-black",
      "#dfe3e6",
    ],
    [
      "--terminal-ansi-red",
      "#c0392f",
    ],
    [
      "--terminal-ansi-green",
      "#1f7a52",
    ],
    [
      "--terminal-ansi-yellow",
      "#8a6100",
    ],
    [
      "--terminal-ansi-blue",
      "#1f66b0",
    ],
    [
      "--terminal-ansi-magenta",
      "#7d47b5",
    ],
    [
      "--terminal-ansi-cyan",
      "#10707a",
    ],
    [
      "--terminal-ansi-white",
      "#4a5259",
    ],
    [
      "--terminal-ansi-bright-black",
      "#6e7880",
    ],
    [
      "--terminal-ansi-bright-red",
      "#9e2b24",
    ],
    [
      "--terminal-ansi-bright-green",
      "#17603f",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#6d4c00",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#17508a",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#62368f",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#0c5960",
    ],
    [
      "--terminal-ansi-bright-white",
      "#171a1d",
    ],
    [
      "--syntax-comment",
      "#6e7880",
    ],
    [
      "--syntax-keyword",
      "#7d47b5",
    ],
    [
      "--syntax-string",
      "#1f7a52",
    ],
    [
      "--syntax-number",
      "#8a6100",
    ],
    [
      "--syntax-constant",
      "#62368f",
    ],
    [
      "--syntax-func",
      "#1f66b0",
    ],
    [
      "--syntax-variable",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--syntax-property",
      "#10707a",
    ],
    [
      "--syntax-gutter-fg",
      "#6e7880",
    ],
    [
      "--syntax-type",
      "#0c5960",
    ],
    [
      "--syntax-operator",
      "oklch(0.148 0.004 228.8)",
    ],
    [
      "--syntax-tag",
      "#c0392f",
    ],
    [
      "--syntax-tag-bracket",
      "#6e7880",
    ],
    [
      "--syntax-attr",
      "#6d4c00",
    ],
    [
      "--syntax-attr-value",
      "#1f7a52",
    ],
    [
      "--syntax-heading",
      "#1f66b0",
    ],
    [
      "--syntax-link",
      "#10707a",
    ],
    [
      "--syntax-invalid",
      "#9e2b24",
    ],
    [
      "--status-added",
      "#1f7a52",
    ],
    [
      "--status-modified",
      "#8a6100",
    ],
    [
      "--status-deleted",
      "#c0392f",
    ],
    [
      "--status-renamed",
      "#1f66b0",
    ],
    [
      "--status-warning",
      "#8a6100",
    ],
    [
      "--status-conflict",
      "#10707a",
    ],
    [
      "--status-ok",
      "#1f7a52",
    ],
    [
      "--emph-faint",
      "10%",
    ],
    [
      "--emph-subtle",
      "30%",
    ],
    [
      "--emph-soft",
      "40%",
    ],
    [
      "--emph-medium",
      "50%",
    ],
    [
      "--emph-strong",
      "60%",
    ],
    [
      "--emph-bold",
      "85%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > windows-xp-dark 1`] = `
{
  "id": "windows-xp",
  "mode": "dark",
  "vars": [
    [
      "--background",
      "#1b1b1b",
    ],
    [
      "--foreground",
      "#e8e8e8",
    ],
    [
      "--card",
      "#2b2b2b",
    ],
    [
      "--card-foreground",
      "#e8e8e8",
    ],
    [
      "--popover",
      "#333333",
    ],
    [
      "--popover-foreground",
      "#e8e8e8",
    ],
    [
      "--primary",
      "#3c7fb1",
    ],
    [
      "--primary-foreground",
      "#ffffff",
    ],
    [
      "--secondary",
      "#3a3a3a",
    ],
    [
      "--secondary-foreground",
      "#e8e8e8",
    ],
    [
      "--muted",
      "#3a3a3a",
    ],
    [
      "--muted-foreground",
      "#a0a0a0",
    ],
    [
      "--accent",
      "#2e5a87",
    ],
    [
      "--accent-foreground",
      "#ffffff",
    ],
    [
      "--destructive",
      "#c05050",
    ],
    [
      "--border",
      "#4a4a4a",
    ],
    [
      "--input",
      "#5a5a5a",
    ],
    [
      "--ring",
      "#3c7fb1",
    ],
    [
      "--sidebar",
      "#232323",
    ],
    [
      "--sidebar-foreground",
      "#e8e8e8",
    ],
    [
      "--sidebar-primary",
      "#3c7fb1",
    ],
    [
      "--sidebar-primary-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-accent",
      "#2e5a87",
    ],
    [
      "--sidebar-accent-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-border",
      "#4a4a4a",
    ],
    [
      "--sidebar-ring",
      "#3c7fb1",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#000000",
    ],
    [
      "--bevel-mid",
      "#3a3a3a",
    ],
    [
      "--bevel-inner",
      "#1b1b1b",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "Tahoma, Verdana, 'DejaVu Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "Tahoma, Verdana, 'DejaVu Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#0c0c0c",
    ],
    [
      "--terminal-foreground",
      "#c0c0c0",
    ],
    [
      "--terminal-cursor",
      "#c0c0c0",
    ],
    [
      "--terminal-cursor-accent",
      "#0c0c0c",
    ],
    [
      "--terminal-selection",
      "rgba(49,106,197,0.40)",
    ],
    [
      "--terminal-ansi-black",
      "#000000",
    ],
    [
      "--terminal-ansi-red",
      "#cc5546",
    ],
    [
      "--terminal-ansi-green",
      "#1e8e1a",
    ],
    [
      "--terminal-ansi-yellow",
      "#808000",
    ],
    [
      "--terminal-ansi-blue",
      "#4275eb",
    ],
    [
      "--terminal-ansi-magenta",
      "#bd4dbb",
    ],
    [
      "--terminal-ansi-cyan",
      "#178988",
    ],
    [
      "--terminal-ansi-white",
      "#c0c0c0",
    ],
    [
      "--terminal-ansi-bright-black",
      "#808080",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ff3e30",
    ],
    [
      "--terminal-ansi-bright-green",
      "#00ff00",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#ffff00",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#5088ff",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#ff00ff",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#00ffff",
    ],
    [
      "--terminal-ansi-bright-white",
      "#ffffff",
    ],
    [
      "--syntax-comment",
      "#808080",
    ],
    [
      "--syntax-keyword",
      "#c655c3",
    ],
    [
      "--syntax-string",
      "#2a9625",
    ],
    [
      "--syntax-number",
      "#868711",
    ],
    [
      "--syntax-constant",
      "#ff00ff",
    ],
    [
      "--syntax-func",
      "#497df3",
    ],
    [
      "--syntax-variable",
      "#e8e8e8",
    ],
    [
      "--syntax-property",
      "#24918f",
    ],
    [
      "--syntax-gutter-fg",
      "#808080",
    ],
    [
      "--syntax-type",
      "#00ffff",
    ],
    [
      "--syntax-operator",
      "#e8e8e8",
    ],
    [
      "--syntax-tag",
      "#d55d4d",
    ],
    [
      "--syntax-tag-bracket",
      "#808080",
    ],
    [
      "--syntax-attr",
      "#ffff00",
    ],
    [
      "--syntax-attr-value",
      "#2a9625",
    ],
    [
      "--syntax-heading",
      "#497df3",
    ],
    [
      "--syntax-link",
      "#24918f",
    ],
    [
      "--syntax-invalid",
      "#ff3e30",
    ],
    [
      "--status-added",
      "#3da637",
    ],
    [
      "--status-modified",
      "#95972a",
    ],
    [
      "--status-deleted",
      "#e66d5c",
    ],
    [
      "--status-renamed",
      "#588eff",
    ],
    [
      "--status-warning",
      "#95972a",
    ],
    [
      "--status-conflict",
      "#38a09d",
    ],
    [
      "--status-ok",
      "#3da637",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;

exports[`resolveTheme > resolves every builtin in both modes to a stable variable set > windows-xp-light 1`] = `
{
  "id": "windows-xp",
  "mode": "light",
  "vars": [
    [
      "--background",
      "#ffffff",
    ],
    [
      "--foreground",
      "#000000",
    ],
    [
      "--card",
      "#ece9d8",
    ],
    [
      "--card-foreground",
      "#000000",
    ],
    [
      "--popover",
      "#ffffff",
    ],
    [
      "--popover-foreground",
      "#000000",
    ],
    [
      "--primary",
      "#245edc",
    ],
    [
      "--primary-foreground",
      "#ffffff",
    ],
    [
      "--secondary",
      "#d4d0c8",
    ],
    [
      "--secondary-foreground",
      "#000000",
    ],
    [
      "--muted",
      "#ece9d8",
    ],
    [
      "--muted-foreground",
      "#5a5750",
    ],
    [
      "--accent",
      "#316ac5",
    ],
    [
      "--accent-foreground",
      "#ffffff",
    ],
    [
      "--destructive",
      "#a80000",
    ],
    [
      "--border",
      "#aca899",
    ],
    [
      "--input",
      "#7f9db9",
    ],
    [
      "--ring",
      "#316ac5",
    ],
    [
      "--sidebar",
      "#ece9d8",
    ],
    [
      "--sidebar-foreground",
      "#000000",
    ],
    [
      "--sidebar-primary",
      "#245edc",
    ],
    [
      "--sidebar-primary-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-accent",
      "#316ac5",
    ],
    [
      "--sidebar-accent-foreground",
      "#ffffff",
    ],
    [
      "--sidebar-border",
      "#aca899",
    ],
    [
      "--sidebar-ring",
      "#316ac5",
    ],
    [
      "--radius",
      "0rem",
    ],
    [
      "--border-style",
      "solid",
    ],
    [
      "--frame-border-width",
      "3px",
    ],
    [
      "--frame-radius",
      "0px",
    ],
    [
      "--frame-padding",
      "0px",
    ],
    [
      "--chrome-border-width",
      "1px",
    ],
    [
      "--panel-border-width",
      "1px",
    ],
    [
      "--slot-border-width",
      "1px",
    ],
    [
      "--control-border-width",
      "1px",
    ],
    [
      "--bevel-width",
      "1px",
    ],
    [
      "--bevel-outer",
      "#0a246a",
    ],
    [
      "--bevel-mid",
      "#245edc",
    ],
    [
      "--bevel-inner",
      "#ece9d8",
    ],
    [
      "--lift-color",
      "transparent",
    ],
    [
      "--lift-depth",
      "0px",
    ],
    [
      "--ui-spacing",
      "0.25rem",
    ],
    [
      "--ui-font-sans",
      "Tahoma, Verdana, 'DejaVu Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--ui-font-display",
      "Tahoma, Verdana, 'DejaVu Sans', 'Inter Variable', sans-serif",
    ],
    [
      "--chrome-tracking",
      "0em",
    ],
    [
      "--chrome-transform",
      "none",
    ],
    [
      "--terminal-background",
      "#0c0c0c",
    ],
    [
      "--terminal-foreground",
      "#c0c0c0",
    ],
    [
      "--terminal-cursor",
      "#c0c0c0",
    ],
    [
      "--terminal-cursor-accent",
      "#0c0c0c",
    ],
    [
      "--terminal-selection",
      "rgba(49,106,197,0.40)",
    ],
    [
      "--terminal-ansi-black",
      "#000000",
    ],
    [
      "--terminal-ansi-red",
      "#cc5546",
    ],
    [
      "--terminal-ansi-green",
      "#1e8e1a",
    ],
    [
      "--terminal-ansi-yellow",
      "#808000",
    ],
    [
      "--terminal-ansi-blue",
      "#4275eb",
    ],
    [
      "--terminal-ansi-magenta",
      "#bd4dbb",
    ],
    [
      "--terminal-ansi-cyan",
      "#178988",
    ],
    [
      "--terminal-ansi-white",
      "#c0c0c0",
    ],
    [
      "--terminal-ansi-bright-black",
      "#808080",
    ],
    [
      "--terminal-ansi-bright-red",
      "#ff3e30",
    ],
    [
      "--terminal-ansi-bright-green",
      "#00ff00",
    ],
    [
      "--terminal-ansi-bright-yellow",
      "#ffff00",
    ],
    [
      "--terminal-ansi-bright-blue",
      "#5088ff",
    ],
    [
      "--terminal-ansi-bright-magenta",
      "#ff00ff",
    ],
    [
      "--terminal-ansi-bright-cyan",
      "#00ffff",
    ],
    [
      "--terminal-ansi-bright-white",
      "#ffffff",
    ],
    [
      "--syntax-comment",
      "#808080",
    ],
    [
      "--syntax-keyword",
      "#b848b7",
    ],
    [
      "--syntax-string",
      "#168913",
    ],
    [
      "--syntax-number",
      "#7b7a00",
    ],
    [
      "--syntax-constant",
      "#d100d3",
    ],
    [
      "--syntax-func",
      "#3e70e6",
    ],
    [
      "--syntax-variable",
      "#000000",
    ],
    [
      "--syntax-property",
      "#0c8484",
    ],
    [
      "--syntax-gutter-fg",
      "#808080",
    ],
    [
      "--syntax-type",
      "#008487",
    ],
    [
      "--syntax-operator",
      "#000000",
    ],
    [
      "--syntax-tag",
      "#c75042",
    ],
    [
      "--syntax-tag-bracket",
      "#808080",
    ],
    [
      "--syntax-attr",
      "#7f7900",
    ],
    [
      "--syntax-attr-value",
      "#168913",
    ],
    [
      "--syntax-heading",
      "#3e70e6",
    ],
    [
      "--syntax-link",
      "#0c8484",
    ],
    [
      "--syntax-invalid",
      "#e82018",
    ],
    [
      "--status-added",
      "#007a00",
    ],
    [
      "--status-modified",
      "#6e6c00",
    ],
    [
      "--status-deleted",
      "#b74135",
    ],
    [
      "--status-renamed",
      "#3161d6",
    ],
    [
      "--status-warning",
      "#6e6c00",
    ],
    [
      "--status-conflict",
      "#007576",
    ],
    [
      "--status-ok",
      "#007a00",
    ],
    [
      "--emph-faint",
      "15%",
    ],
    [
      "--emph-subtle",
      "40%",
    ],
    [
      "--emph-soft",
      "55%",
    ],
    [
      "--emph-medium",
      "70%",
    ],
    [
      "--emph-strong",
      "85%",
    ],
    [
      "--emph-bold",
      "100%",
    ],
  ],
}
`;
